# AutoClicker

./: .gitignore  autoclicker.py  build.ps1  installer.iss  pyproject.toml  requirements-dev.txt  requirements.txt
